--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,204 +6,331 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_1
-    type: vmess
-    server: 8t6w06.abzoones.xyz
-    port: 36311
-    cipher: auto
-    uuid: 369d0f3d-e900-4df6-95ea-d388e166e361
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw06.abpilot.xyz
-    network: tcp
-  - &id002
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_2
-    type: vmess
-    server: 5a4u04.abzoones.xyz
-    port: 36821
-    cipher: auto
-    uuid: 369d0f3d-e900-4df6-95ea-d388e166e361
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: au04.abpilot.xyz
-    network: tcp
-  - &id003
-    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
-    type: vmess
-    server: 6e2s04.abzoones.xyz
-    port: 36884
-    cipher: auto
-    uuid: 369d0f3d-e900-4df6-95ea-d388e166e361
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: es04.abpilot.xyz
-    network: tcp
-  - &id004
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 45.58.186.91
-    port: 51140
+    server: 104.22.20.108
+    port: 8880
     cipher: auto
-    uuid: 4a138e19-0595-4d51-83c6-fd276cf7d307
-    alterId: 64
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    alterId: 0
     tls: false
     skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
-    type: vmess
-    server: 8h2k06.abzoones.xyz
-    port: 36611
-    cipher: auto
-    uuid: 369d0f3d-e900-4df6-95ea-d388e166e361
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: hk06.abpilot.xyz
-    network: tcp
-  - &id006
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
+  - &id002
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 104.16.139.135
-    port: 8080
-    cipher: auto
-    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
+    server: 172.64.96.134
+    port: 80
+    cipher: aes-128-gcm
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /qwer01
+      path: /shirker
       headers:
-        host: ecc.vtcss.top
-  - &id007
-    name: 🇨🇳_CN_中国->🇦🇺_AU_澳大利亚_3
+        host: dp1.scproxy.top
+  - &id003
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
     type: vmess
-    server: 4o5a3u04.mcfront.xyz
-    port: 31821
+    server: 7p3h04.abzoones.xyz
+    port: 36801
     cipher: auto
-    uuid: 434ec7b0-da24-45f1-aa53-997dfa0b9b0f
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: au04.lovemc.xyz
+    servername: ph04.abpilot.xyz
+    network: tcp
+  - &id004
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: vmess
+    server: 8h2k04.abzoones.xyz
+    port: 36601
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hk04.abpilot.xyz
+    network: tcp
+  - &id005
+    name: 🇨🇳_CN_中国->🇵🇹_PT_葡萄牙
+    type: vmess
+    server: 4p2t01.abzoones.xyz
+    port: 36881
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: pt04.abpilot.xyz
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_1
+    type: vmess
+    server: 9s5g04.abzoones.xyz
+    port: 36201
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg04.abpilot.xyz
+    network: tcp
+  - &id007
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_2
+    type: vmess
+    server: 9s5g05.abzoones.xyz
+    port: 36206
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg05.abpilot.xyz
     network: tcp
   - &id008
-    name: 🇺🇸_US_美国_3
+    name: 🇨🇳_CN_中国->🇳🇱_NL_荷兰
     type: vmess
-    server: 104.20.6.253
-    port: 8080
+    server: 2n8l04.abzoones.xyz
+    port: 36901
     cipher: auto
-    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
+    servername: nl04.abpilot.xyz
+    network: tcp
   - &id009
-    name: 🇨🇷_CR_哥斯达黎加->🇺🇸_US_美国_1
-    type: vmess
-    server: 190.93.244.217
-    port: 8080
-    cipher: auto
-    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
-  - &id010
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 104.24.220.52
-    port: 8880
-    cipher: auto
-    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
-  - &id011
-    name: 🇨🇳_CN_中国->🇹🇷_TR_土耳其
-    type: vmess
-    server: 4t1u6r04.mcfront.xyz
-    port: 31868
-    cipher: auto
-    uuid: 434ec7b0-da24-45f1-aa53-997dfa0b9b0f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tr04.lovemc.xyz
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国->🇺🇦_UA_乌克兰
-    type: vmess
-    server: 8u9a04.abzoones.xyz
-    port: 36871
-    cipher: auto
-    uuid: 369d0f3d-e900-4df6-95ea-d388e166e361
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ua04.abpilot.xyz
-    network: tcp
-  - &id013
     name: 🇨🇳_CN_中国->🇯🇵_JP_日本_1
     type: vmess
-    server: 1j8p05.abzoones.xyz
-    port: 36106
+    server: 1j8p04.abzoones.xyz
+    port: 36116
     cipher: auto
-    uuid: 369d0f3d-e900-4df6-95ea-d388e166e361
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
     alterId: 0
     tls: true
     skip-cert-verify: true
-    servername: jp05.abpilot.xyz
+    servername: jp04.abpilot.xyz
+    network: tcp
+  - &id010
+    name: 🇨🇳_CN_中国->🇩🇪_DE_德国
+    type: vmess
+    server: 3d6e04.abzoones.xyz
+    port: 36841
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: de04.abpilot.xyz
+    network: tcp
+  - &id011
+    name: 🇨🇳_CN_中国->🇻🇳_VN_越南
+    type: vmess
+    server: 3v4n04.abzoones.xyz
+    port: 36874
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: vn04.abpilot.xyz
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
+    type: vmess
+    server: 172.64.106.104
+    port: 2095
+    cipher: auto
+    uuid: 417d27fb-cb93-3bd8-9bf7-71cd91319821
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /hgcefomn
+      headers:
+        host: amszx.66666654.xyz
+  - &id013
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: vmess
+    server: 2u3k04.abzoones.xyz
+    port: 36811
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: uk04.abpilot.xyz
     network: tcp
   - &id014
-    name: 🇨🇷_CR_哥斯达黎加->🇺🇸_US_美国_2
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: 190.93.246.192
-    port: 8080
+    server: 3u1s05.abzoones.xyz
+    port: 36506
     cipher: auto
-    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
     alterId: 0
-    tls: false
+    tls: true
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /qwer01
-      headers:
-        host: ecc.vtcss.top
+    servername: us05.abpilot.xyz
+    network: tcp
   - &id015
-    name: 🇺🇸_US_美国_5
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
     type: vmess
-    server: 104.23.103.75
-    port: 8880
+    server: 8h2k05.abzoones.xyz
+    port: 36606
     cipher: auto
-    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
     alterId: 0
-    tls: false
+    tls: true
+    skip-cert-verify: true
+    servername: hk05.abpilot.xyz
+    network: tcp
+  - &id016
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
+    type: vmess
+    server: 5c1a04.abzoones.xyz
+    port: 36701
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ca04.abpilot.xyz
+    network: tcp
+  - &id017
+    name: 🇨🇳_CN_中国->🇧🇷_BR_巴西
+    type: vmess
+    server: 6i2r04.abzoones.xyz
+    port: 36877
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: br04.abpilot.xyz
+    network: tcp
+  - &id018
+    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
+    type: vmess
+    server: 8t6w04.abzoones.xyz
+    port: 36301
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: tw04.abpilot.xyz
+    network: tcp
+  - &id019
+    name: 🇨🇳_CN_中国->🇭🇺_HU_匈牙利
+    type: vmess
+    server: 2h4u04.abzoones.xyz
+    port: 36864
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: hu04.abpilot.xyz
+    network: tcp
+  - &id020
+    name: 🇨🇳_CN_中国->🇰🇷_KR_韩国
+    type: vmess
+    server: 8k2r04.abzoones.xyz
+    port: 36401
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: kr04.abpilot.xyz
+    network: tcp
+  - &id021
+    name: 🇨🇳_CN_中国->🇷🇺_RU_俄罗斯联邦
+    type: vmess
+    server: 8r5u04.abzoones.xyz
+    port: 36851
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ru04.abpilot.xyz
+    network: tcp
+  - &id022
+    name: 🇨🇳_CN_中国->🇦🇷_AR_阿根廷
+    type: vmess
+    server: 9a8r04.abzoones.xyz
+    port: 36861
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: ar04.abpilot.xyz
+    network: tcp
+  - &id023
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: 1t8h04.abzoones.xyz
+    port: 36904
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: th04.abpilot.xyz
+    network: tcp
+  - &id024
+    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
+    type: vmess
+    server: 1j8p06.abzoones.xyz
+    port: 36111
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: jp06.abpilot.xyz
+    network: tcp
+  - &id025
+    name: 🇨🇳_CN_中国->🇸🇬_SG_新加坡_3
+    type: vmess
+    server: 9s5g06.abzoones.xyz
+    port: 36211
+    cipher: auto
+    uuid: 7c390d3d-93c0-4afe-b583-eb137633cf97
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    servername: sg06.abpilot.xyz
+    network: tcp
+  - &id026
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: bluehost.com
+    port: 443
+    cipher: auto
+    uuid: be74ca03-6a7c-4c88-edc2-c6434ead0cfa
+    alterId: 0
+    tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /qwer01
+      path: /16575
       headers:
-        host: ecc.vtcss.top
-  - &id016
-    name: 🇺🇸_US_美国_6
+        host: cdnca1.digisport.shop
+  - &id027
+    name: 🇺🇸_US_美国_4
     type: vmess
     server: 141.101.114.249
     port: 8880
@@ -217,76 +344,40 @@ proxies:
       path: /qwer01
       headers:
         host: ecc.vtcss.top
-  - &id017
-    name: 🇨🇷_CR_哥斯达黎加->🇺🇸_US_美国_3
+  - &id028
+    name: 🇩🇪_DE_德国
     type: vmess
-    server: 190.93.246.37
-    port: 8080
+    server: amszxc.66666654.xyz
+    port: 2095
     cipher: auto
-    uuid: 54d4a5e9-6441-442c-cab7-05620cbe4f7d
+    uuid: 417d27fb-cb93-3bd8-9bf7-71cd91319821
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /qwer01
+      path: /hgcefomn
       headers:
-        host: ecc.vtcss.top
-  - &id018
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+        host: amszx.66666654.xyz
+  - &id029
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
     type: vmess
-    server: 4a2u0a04.mcfront.xyz
-    port: 31501
-    cipher: auto
-    uuid: 434ec7b0-da24-45f1-aa53-997dfa0b9b0f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: us04.lovemc.xyz
-    network: tcp
-  - &id019
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 6q3i1n04.mcfront.xyz
-    port: 31831
-    cipher: auto
-    uuid: 434ec7b0-da24-45f1-aa53-997dfa0b9b0f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: in04.lovemc.xyz
-    network: tcp
-  - &id020
-    name: 🇨🇳_CN_中国->🇯🇵_JP_日本_2
-    type: vmess
-    server: 6w7j3p06.mcfront.xyz
-    port: 31111
-    cipher: auto
-    uuid: 434ec7b0-da24-45f1-aa53-997dfa0b9b0f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: jp06.lovemc.xyz
-    network: tcp
-  - &id021
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: cfcdn2.sanfencdn.net
+    server: 103.184.45.160
     port: 443
     cipher: auto
-    uuid: 85c359bc-2247-4d83-a294-5d7752db567f
+    uuid: 62433eb1-131f-4d3c-877c-192914a2d45c
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /zh-cn
+      path: /qwer
       headers:
-        host: us2.sanfencdn1.com
-  - &id022
-    name: 🇺🇸_US_美国_8
+        host: uxx.vtcss.top
+  - &id030
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 198.41.222.153
+    server: 104.25.196.249
     port: 8880
     cipher: auto
     uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
@@ -298,179 +389,91 @@ proxies:
       path: /qwer01
       headers:
         host: ecc.vtcss.top
-  - &id023
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: 1a4p0h04.mcfront.xyz
-    port: 31801
-    cipher: auto
-    uuid: 434ec7b0-da24-45f1-aa53-997dfa0b9b0f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: ph04.lovemc.xyz
-    network: tcp
-  - &id024
-    name: 🇨🇳_CN_中国->🇹🇼_TW_台湾
-    type: vmess
-    server: 2d1t5w04.mcfront.xyz
-    port: 31301
-    cipher: auto
-    uuid: 434ec7b0-da24-45f1-aa53-997dfa0b9b0f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: tw04.lovemc.xyz
-    network: tcp
-  - &id025
-    name: 🇨🇳_CN_中国->🇳🇱_NL_荷兰
-    type: vmess
-    server: 6e2n8l04.mcfront.xyz
-    port: 31901
-    cipher: auto
-    uuid: 434ec7b0-da24-45f1-aa53-997dfa0b9b0f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: nl04.lovemc.xyz
-    network: tcp
-  - &id026
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 2c2t8h04.mcfront.xyz
-    port: 31904
-    cipher: auto
-    uuid: 434ec7b0-da24-45f1-aa53-997dfa0b9b0f
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: th04.lovemc.xyz
-    network: tcp
-  - &id027
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_1
-    type: vmess
-    server: 103.160.204.12
-    port: 443
-    cipher: auto
-    uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: a2284cc1
-      headers:
-        host: dedi2.1808.cf
-  - &id028
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_2
-    type: vmess
-    server: 103.160.204.43
-    port: 443
-    cipher: auto
-    uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: a2284cc1
-      headers:
-        host: dedi2.1808.cf
-  - &id029
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_3
-    type: vmess
-    server: 103.160.204.30
-    port: 443
-    cipher: auto
-    uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: a2284cc1
-      headers:
-        host: dedi2.1808.cf
-  - &id030
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_4
-    type: vmess
-    server: 103.160.204.24
-    port: 443
-    cipher: auto
-    uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: a2284cc1
-      headers:
-        host: dedi2.1808.cf
   - &id031
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_5
+    name: 🇳🇱_NL_荷兰
     type: vmess
-    server: 103.160.204.17
-    port: 443
+    server: 188.114.97.90
+    port: 8880
     cipher: auto
-    uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: a2284cc1
+      path: /qwer01
       headers:
-        host: dedi2.1808.cf
+        host: ecc.vtcss.top
   - &id032
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_6
+    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
     type: vmess
-    server: 103.160.204.249
-    port: 443
+    server: 172.67.10.121
+    port: 80
     cipher: auto
-    uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70
+    uuid: 5f751c6e-50b1-4797-ba8e-6ffe324a0bce
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: a2284cc1
+      path: /shirker
       headers:
-        host: dedi2.1808.cf
+        host: uk2.scproxy.top
   - &id033
-    name: 🇭🇰_HK_香港->🇺🇸_US_美国_7
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
     type: vmess
-    server: 103.160.204.23
+    server: 104.18.29.109
     port: 443
     cipher: auto
-    uuid: a2284cc1-20d8-4c78-a622-3e3cca767a70
+    uuid: be74ca03-6a7c-4c88-edc2-c6434ead0cfa
     alterId: 0
     tls: true
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: a2284cc1
+      path: /16575
       headers:
-        host: dedi2.1808.cf
+        host: cdnca1.digisport.shop
   - &id034
-    name: 🇯🇵_JP_日本_1
-    type: trojan
-    server: jp2.421421.xyz
-    port: 20230
-    udp: true
-    password: d6eafa01-5d46-4329-9831-ba25323a32b0
-    sni: 421421.xyz
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 172.67.163.143
+    port: 8880
+    cipher: auto
+    uuid: 006023f6-6d17-4ec6-af24-bcc5f7c44e35
+    alterId: 0
+    tls: false
     skip-cert-verify: true
-    network: tcp
+    network: ws
+    ws-opts:
+      path: /qwer01
+      headers:
+        host: ecc.vtcss.top
   - &id035
-    name: 🇯🇵_JP_日本_2
+    name: 🇸🇬_SG_新加坡
     type: trojan
-    server: jp8.421421.xyz
-    port: 20230
+    server: pqawssg1.aiopen.cfd
+    port: 443
     udp: true
-    password: d6eafa01-5d46-4329-9831-ba25323a32b0
-    sni: 421421.xyz
+    password: f0366e33-84c9-4a20-ad40-4f1e2c230c36
+    sni: 18-140-66-207.nhost.00cdn.com
     skip-cert-verify: true
     network: tcp
+  - &id036
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 104.24.181.242
+    port: 8080
+    cipher: auto
+    uuid: 20670d72-d0ab-469e-81f4-1564f03955b0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /qwer
+      headers:
+        host: uxx.vtcss.top
 proxy-groups:
   - name: PROXY
     type: select
@@ -532,6 +535,7 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -572,6 +576,7 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
   - name: SELECT
     type: select
     proxies:
@@ -610,6 +615,7 @@ proxy-groups:
       - *id033
       - *id034
       - *id035
+      - *id036
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
